<?php

declare(strict_types=1);

namespace DoctrineMigrations;

use Doctrine\DBAL\Schema\Schema;
use Doctrine\Migrations\AbstractMigration;

/**
 * Auto-generated Migration: Please modify to your needs!
 */
final class Version20260425163519 extends AbstractMigration
{
    public function getDescription(): string
    {
        return '';
    }

    public function up(Schema $schema): void
    {
        // this up() migration is auto-generated, please modify it to your needs
        $this->addSql('CREATE TABLE recette.allergenes (id UUID NOT NULL, nom VARCHAR(150) NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE UNIQUE INDEX UNIQ_883E4E3C6C6E55B5 ON recette.allergenes (nom)');
        $this->addSql('CREATE TABLE recette.etapes (id UUID NOT NULL, numero INT NOT NULL, instructions JSON NOT NULL, astuce TEXT DEFAULT NULL, recette_id UUID NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_B0CB277189312FE9 ON recette.etapes (recette_id)');
        $this->addSql('CREATE TABLE recette.ingredients (id UUID NOT NULL, nom VARCHAR(255) NOT NULL, mois_saison JSONB DEFAULT NULL, type_id UUID DEFAULT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE UNIQUE INDEX UNIQ_BFCD99D6C6E55B5 ON recette.ingredients (nom)');
        $this->addSql('CREATE INDEX IDX_BFCD99DC54C8C93 ON recette.ingredients (type_id)');
        $this->addSql('CREATE TABLE recette.nutrition_faits (id UUID NOT NULL, contexte VARCHAR(10) NOT NULL, energie_kj DOUBLE PRECISION DEFAULT NULL, energie_kcal DOUBLE PRECISION DEFAULT NULL, matieres_grasses DOUBLE PRECISION DEFAULT NULL, acides_gras_satures DOUBLE PRECISION DEFAULT NULL, glucides DOUBLE PRECISION DEFAULT NULL, sucres DOUBLE PRECISION DEFAULT NULL, fibres DOUBLE PRECISION DEFAULT NULL, proteines DOUBLE PRECISION DEFAULT NULL, sel DOUBLE PRECISION DEFAULT NULL, potassium DOUBLE PRECISION DEFAULT NULL, calcium DOUBLE PRECISION DEFAULT NULL, cholesterol DOUBLE PRECISION DEFAULT NULL, fer DOUBLE PRECISION DEFAULT NULL, acides_gras_trans DOUBLE PRECISION DEFAULT NULL, recette_id UUID NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_4777433189312FE9 ON recette.nutrition_faits (recette_id)');
        $this->addSql('CREATE UNIQUE INDEX uq_nutrition_recette_contexte ON recette.nutrition_faits (recette_id, contexte)');
        $this->addSql('CREATE TABLE recette.recette_ingredients (id UUID NOT NULL, quantite VARCHAR(50) DEFAULT NULL, unite VARCHAR(50) DEFAULT NULL, raw VARCHAR(512) NOT NULL, recette_id UUID NOT NULL, ingredient_id UUID NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_3D8E3AFA89312FE9 ON recette.recette_ingredients (recette_id)');
        $this->addSql('CREATE INDEX IDX_3D8E3AFA933FE08C ON recette.recette_ingredients (ingredient_id)');
        $this->addSql('CREATE TABLE recette.recettes (id UUID NOT NULL, nom VARCHAR(255) NOT NULL, description TEXT DEFAULT NULL, difficulte VARCHAR(20) DEFAULT NULL, temps_total INT DEFAULT NULL, temps_preparation INT DEFAULT NULL, nb_personnes INT NOT NULL, image_url VARCHAR(512) DEFAULT NULL, source VARCHAR(512) DEFAULT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE TABLE recette.recette_tags (recette_id UUID NOT NULL, tag_id UUID NOT NULL, PRIMARY KEY (recette_id, tag_id))');
        $this->addSql('CREATE INDEX IDX_4A21514D89312FE9 ON recette.recette_tags (recette_id)');
        $this->addSql('CREATE INDEX IDX_4A21514DBAD26311 ON recette.recette_tags (tag_id)');
        $this->addSql('CREATE TABLE recette.recette_allergenes (recette_id UUID NOT NULL, allergene_id UUID NOT NULL, PRIMARY KEY (recette_id, allergene_id))');
        $this->addSql('CREATE INDEX IDX_F997DF9689312FE9 ON recette.recette_allergenes (recette_id)');
        $this->addSql('CREATE INDEX IDX_F997DF964646AB2 ON recette.recette_allergenes (allergene_id)');
        $this->addSql('CREATE TABLE recette.recette_ustensiles (recette_id UUID NOT NULL, ustensile_id UUID NOT NULL, PRIMARY KEY (recette_id, ustensile_id))');
        $this->addSql('CREATE INDEX IDX_A3D3C14E89312FE9 ON recette.recette_ustensiles (recette_id)');
        $this->addSql('CREATE INDEX IDX_A3D3C14EB78A4282 ON recette.recette_ustensiles (ustensile_id)');
        $this->addSql('CREATE TABLE auth.refresh_tokens (refresh_token VARCHAR(128) NOT NULL, username VARCHAR(255) NOT NULL, valid TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE UNIQUE INDEX UNIQ_39BB651DC74F2195 ON auth.refresh_tokens (refresh_token)');
        $this->addSql('CREATE TABLE recette.tags (id UUID NOT NULL, nom VARCHAR(100) NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE UNIQUE INDEX UNIQ_E60EB7026C6E55B5 ON recette.tags (nom)');
        $this->addSql('CREATE TABLE recette.type_ingredients (id UUID NOT NULL, nom VARCHAR(100) NOT NULL, slug VARCHAR(100) NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE UNIQUE INDEX UNIQ_44C5229F6C6E55B5 ON recette.type_ingredients (nom)');
        $this->addSql('CREATE UNIQUE INDEX UNIQ_44C5229F989D9B62 ON recette.type_ingredients (slug)');
        $this->addSql('CREATE TABLE auth.users (id UUID NOT NULL, email VARCHAR(180) NOT NULL, roles JSON NOT NULL, password VARCHAR(255) NOT NULL, first_name VARCHAR(100) NOT NULL, last_name VARCHAR(100) NOT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE UNIQUE INDEX UNIQ_18DF2AF8E7927C74 ON auth.users (email)');
        $this->addSql('CREATE TABLE recette.ustensiles (id UUID NOT NULL, nom VARCHAR(150) NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE UNIQUE INDEX UNIQ_D27A50E46C6E55B5 ON recette.ustensiles (nom)');
        $this->addSql('ALTER TABLE recette.etapes ADD CONSTRAINT FK_B0CB277189312FE9 FOREIGN KEY (recette_id) REFERENCES recette.recettes (id) ON DELETE CASCADE NOT DEFERRABLE');
        $this->addSql('ALTER TABLE recette.ingredients ADD CONSTRAINT FK_BFCD99DC54C8C93 FOREIGN KEY (type_id) REFERENCES recette.type_ingredients (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE recette.nutrition_faits ADD CONSTRAINT FK_4777433189312FE9 FOREIGN KEY (recette_id) REFERENCES recette.recettes (id) ON DELETE CASCADE NOT DEFERRABLE');
        $this->addSql('ALTER TABLE recette.recette_ingredients ADD CONSTRAINT FK_3D8E3AFA89312FE9 FOREIGN KEY (recette_id) REFERENCES recette.recettes (id) ON DELETE CASCADE NOT DEFERRABLE');
        $this->addSql('ALTER TABLE recette.recette_ingredients ADD CONSTRAINT FK_3D8E3AFA933FE08C FOREIGN KEY (ingredient_id) REFERENCES recette.ingredients (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE recette.recette_tags ADD CONSTRAINT FK_4A21514D89312FE9 FOREIGN KEY (recette_id) REFERENCES recette.recettes (id) ON DELETE CASCADE');
        $this->addSql('ALTER TABLE recette.recette_tags ADD CONSTRAINT FK_4A21514DBAD26311 FOREIGN KEY (tag_id) REFERENCES recette.tags (id) ON DELETE CASCADE');
        $this->addSql('ALTER TABLE recette.recette_allergenes ADD CONSTRAINT FK_F997DF9689312FE9 FOREIGN KEY (recette_id) REFERENCES recette.recettes (id) ON DELETE CASCADE');
        $this->addSql('ALTER TABLE recette.recette_allergenes ADD CONSTRAINT FK_F997DF964646AB2 FOREIGN KEY (allergene_id) REFERENCES recette.allergenes (id) ON DELETE CASCADE');
        $this->addSql('ALTER TABLE recette.recette_ustensiles ADD CONSTRAINT FK_A3D3C14E89312FE9 FOREIGN KEY (recette_id) REFERENCES recette.recettes (id) ON DELETE CASCADE');
        $this->addSql('ALTER TABLE recette.recette_ustensiles ADD CONSTRAINT FK_A3D3C14EB78A4282 FOREIGN KEY (ustensile_id) REFERENCES recette.ustensiles (id) ON DELETE CASCADE');
        $this->addSql('ALTER TABLE etapes DROP CONSTRAINT fk_e3443e1789312fe9');
        $this->addSql('ALTER TABLE ingredients DROP CONSTRAINT fk_ing_type');
        $this->addSql('ALTER TABLE nutrition_faits DROP CONSTRAINT fk_ffbe715d89312fe9');
        $this->addSql('ALTER TABLE recette_allergenes DROP CONSTRAINT fk_b792c30f89312fe9');
        $this->addSql('ALTER TABLE recette_allergenes DROP CONSTRAINT fk_b792c30f4646ab2');
        $this->addSql('ALTER TABLE recette_ingredients DROP CONSTRAINT fk_b413140689312fe9');
        $this->addSql('ALTER TABLE recette_ingredients DROP CONSTRAINT fk_b4131406933fe08c');
        $this->addSql('ALTER TABLE recette_tags DROP CONSTRAINT fk_22bc7e7dbad26311');
        $this->addSql('ALTER TABLE recette_tags DROP CONSTRAINT fk_22bc7e7d89312fe9');
        $this->addSql('ALTER TABLE recette_ustensiles DROP CONSTRAINT fk_edd6ddd789312fe9');
        $this->addSql('ALTER TABLE recette_ustensiles DROP CONSTRAINT fk_edd6ddd7b78a4282');
        $this->addSql('DROP TABLE allergenes');
        $this->addSql('DROP TABLE etapes');
        $this->addSql('DROP TABLE ingredients');
        $this->addSql('DROP TABLE nutrition_faits');
        $this->addSql('DROP TABLE recette_allergenes');
        $this->addSql('DROP TABLE recette_ingredients');
        $this->addSql('DROP TABLE recette_tags');
        $this->addSql('DROP TABLE recette_ustensiles');
        $this->addSql('DROP TABLE recettes');
        $this->addSql('DROP TABLE refresh_tokens');
        $this->addSql('DROP TABLE tags');
        $this->addSql('DROP TABLE type_ingredients');
        $this->addSql('DROP TABLE users');
        $this->addSql('DROP TABLE ustensiles');
    }

    public function down(Schema $schema): void
    {
        // this down() migration is auto-generated, please modify it to your needs
        $this->addSql('CREATE TABLE allergenes (id UUID NOT NULL, nom VARCHAR(150) NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE UNIQUE INDEX uniq_cbfdfad66c6e55b5 ON allergenes (nom)');
        $this->addSql('CREATE TABLE etapes (id UUID NOT NULL, recette_id UUID NOT NULL, numero INT NOT NULL, instructions JSON NOT NULL, astuce TEXT DEFAULT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX idx_e3443e1789312fe9 ON etapes (recette_id)');
        $this->addSql('CREATE TABLE ingredients (id UUID NOT NULL, nom VARCHAR(255) NOT NULL, type_id UUID DEFAULT NULL, mois_saison JSONB DEFAULT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE UNIQUE INDEX uniq_4b60114f6c6e55b5 ON ingredients (nom)');
        $this->addSql('CREATE INDEX idx_ingredients_mois_saison ON ingredients (mois_saison)');
        $this->addSql('CREATE INDEX idx_4b60114fc54c8c93 ON ingredients (type_id)');
        $this->addSql('CREATE TABLE nutrition_faits (id UUID NOT NULL, recette_id UUID NOT NULL, contexte VARCHAR(10) NOT NULL, energie_kj DOUBLE PRECISION DEFAULT NULL, energie_kcal DOUBLE PRECISION DEFAULT NULL, matieres_grasses DOUBLE PRECISION DEFAULT NULL, acides_gras_satures DOUBLE PRECISION DEFAULT NULL, glucides DOUBLE PRECISION DEFAULT NULL, sucres DOUBLE PRECISION DEFAULT NULL, fibres DOUBLE PRECISION DEFAULT NULL, proteines DOUBLE PRECISION DEFAULT NULL, sel DOUBLE PRECISION DEFAULT NULL, potassium DOUBLE PRECISION DEFAULT NULL, calcium DOUBLE PRECISION DEFAULT NULL, cholesterol DOUBLE PRECISION DEFAULT NULL, fer DOUBLE PRECISION DEFAULT NULL, acides_gras_trans DOUBLE PRECISION DEFAULT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX idx_ffbe715d89312fe9 ON nutrition_faits (recette_id)');
        $this->addSql('CREATE UNIQUE INDEX uq_nutrition_recette_contexte ON nutrition_faits (recette_id, contexte)');
        $this->addSql('CREATE TABLE recette_allergenes (recette_id UUID NOT NULL, allergene_id UUID NOT NULL, PRIMARY KEY (recette_id, allergene_id))');
        $this->addSql('CREATE INDEX idx_b792c30f89312fe9 ON recette_allergenes (recette_id)');
        $this->addSql('CREATE INDEX idx_b792c30f4646ab2 ON recette_allergenes (allergene_id)');
        $this->addSql('CREATE TABLE recette_ingredients (id UUID NOT NULL, recette_id UUID NOT NULL, ingredient_id UUID NOT NULL, quantite VARCHAR(50) DEFAULT NULL, unite VARCHAR(50) DEFAULT NULL, raw VARCHAR(512) NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX idx_b4131406933fe08c ON recette_ingredients (ingredient_id)');
        $this->addSql('CREATE INDEX idx_b413140689312fe9 ON recette_ingredients (recette_id)');
        $this->addSql('CREATE TABLE recette_tags (recette_id UUID NOT NULL, tag_id UUID NOT NULL, PRIMARY KEY (recette_id, tag_id))');
        $this->addSql('CREATE INDEX idx_22bc7e7d89312fe9 ON recette_tags (recette_id)');
        $this->addSql('CREATE INDEX idx_22bc7e7dbad26311 ON recette_tags (tag_id)');
        $this->addSql('CREATE TABLE recette_ustensiles (recette_id UUID NOT NULL, ustensile_id UUID NOT NULL, PRIMARY KEY (recette_id, ustensile_id))');
        $this->addSql('CREATE INDEX idx_edd6ddd7b78a4282 ON recette_ustensiles (ustensile_id)');
        $this->addSql('CREATE INDEX idx_edd6ddd789312fe9 ON recette_ustensiles (recette_id)');
        $this->addSql('CREATE TABLE recettes (id UUID NOT NULL, nom VARCHAR(255) NOT NULL, description TEXT DEFAULT NULL, difficulte VARCHAR(20) DEFAULT NULL, temps_total INT DEFAULT NULL, temps_preparation INT DEFAULT NULL, nb_personnes INT NOT NULL, image_url VARCHAR(512) DEFAULT NULL, source VARCHAR(512) DEFAULT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE TABLE refresh_tokens (refresh_token VARCHAR(128) NOT NULL, username VARCHAR(255) NOT NULL, valid TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE UNIQUE INDEX uniq_9bace7e1c74f2195 ON refresh_tokens (refresh_token)');
        $this->addSql('CREATE TABLE tags (id UUID NOT NULL, nom VARCHAR(100) NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE UNIQUE INDEX uniq_6fbc94266c6e55b5 ON tags (nom)');
        $this->addSql('CREATE TABLE type_ingredients (id UUID NOT NULL, nom VARCHAR(100) NOT NULL, slug VARCHAR(100) NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE UNIQUE INDEX uniq_79c6de6c6e55b5 ON type_ingredients (nom)');
        $this->addSql('CREATE UNIQUE INDEX uniq_79c6de989d9b62 ON type_ingredients (slug)');
        $this->addSql('CREATE TABLE users (id UUID NOT NULL, email VARCHAR(180) NOT NULL, roles JSON NOT NULL, password VARCHAR(255) NOT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, first_name VARCHAR(100) NOT NULL, last_name VARCHAR(100) NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE UNIQUE INDEX uniq_1483a5e9e7927c74 ON users (email)');
        $this->addSql('CREATE TABLE ustensiles (id UUID NOT NULL, nom VARCHAR(150) NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE UNIQUE INDEX uniq_91b9e40e6c6e55b5 ON ustensiles (nom)');
        $this->addSql('ALTER TABLE etapes ADD CONSTRAINT fk_e3443e1789312fe9 FOREIGN KEY (recette_id) REFERENCES recettes (id) ON DELETE CASCADE NOT DEFERRABLE INITIALLY IMMEDIATE');
        $this->addSql('ALTER TABLE ingredients ADD CONSTRAINT fk_ing_type FOREIGN KEY (type_id) REFERENCES type_ingredients (id) NOT DEFERRABLE INITIALLY IMMEDIATE');
        $this->addSql('ALTER TABLE nutrition_faits ADD CONSTRAINT fk_ffbe715d89312fe9 FOREIGN KEY (recette_id) REFERENCES recettes (id) ON DELETE CASCADE NOT DEFERRABLE INITIALLY IMMEDIATE');
        $this->addSql('ALTER TABLE recette_allergenes ADD CONSTRAINT fk_b792c30f89312fe9 FOREIGN KEY (recette_id) REFERENCES recettes (id) ON DELETE CASCADE NOT DEFERRABLE INITIALLY IMMEDIATE');
        $this->addSql('ALTER TABLE recette_allergenes ADD CONSTRAINT fk_b792c30f4646ab2 FOREIGN KEY (allergene_id) REFERENCES allergenes (id) ON DELETE CASCADE NOT DEFERRABLE INITIALLY IMMEDIATE');
        $this->addSql('ALTER TABLE recette_ingredients ADD CONSTRAINT fk_b413140689312fe9 FOREIGN KEY (recette_id) REFERENCES recettes (id) ON DELETE CASCADE NOT DEFERRABLE INITIALLY IMMEDIATE');
        $this->addSql('ALTER TABLE recette_ingredients ADD CONSTRAINT fk_b4131406933fe08c FOREIGN KEY (ingredient_id) REFERENCES ingredients (id) NOT DEFERRABLE INITIALLY IMMEDIATE');
        $this->addSql('ALTER TABLE recette_tags ADD CONSTRAINT fk_22bc7e7dbad26311 FOREIGN KEY (tag_id) REFERENCES tags (id) ON DELETE CASCADE NOT DEFERRABLE INITIALLY IMMEDIATE');
        $this->addSql('ALTER TABLE recette_tags ADD CONSTRAINT fk_22bc7e7d89312fe9 FOREIGN KEY (recette_id) REFERENCES recettes (id) ON DELETE CASCADE NOT DEFERRABLE INITIALLY IMMEDIATE');
        $this->addSql('ALTER TABLE recette_ustensiles ADD CONSTRAINT fk_edd6ddd789312fe9 FOREIGN KEY (recette_id) REFERENCES recettes (id) ON DELETE CASCADE NOT DEFERRABLE INITIALLY IMMEDIATE');
        $this->addSql('ALTER TABLE recette_ustensiles ADD CONSTRAINT fk_edd6ddd7b78a4282 FOREIGN KEY (ustensile_id) REFERENCES ustensiles (id) ON DELETE CASCADE NOT DEFERRABLE INITIALLY IMMEDIATE');
        $this->addSql('ALTER TABLE recette.etapes DROP CONSTRAINT FK_B0CB277189312FE9');
        $this->addSql('ALTER TABLE recette.ingredients DROP CONSTRAINT FK_BFCD99DC54C8C93');
        $this->addSql('ALTER TABLE recette.nutrition_faits DROP CONSTRAINT FK_4777433189312FE9');
        $this->addSql('ALTER TABLE recette.recette_ingredients DROP CONSTRAINT FK_3D8E3AFA89312FE9');
        $this->addSql('ALTER TABLE recette.recette_ingredients DROP CONSTRAINT FK_3D8E3AFA933FE08C');
        $this->addSql('ALTER TABLE recette.recette_tags DROP CONSTRAINT FK_4A21514D89312FE9');
        $this->addSql('ALTER TABLE recette.recette_tags DROP CONSTRAINT FK_4A21514DBAD26311');
        $this->addSql('ALTER TABLE recette.recette_allergenes DROP CONSTRAINT FK_F997DF9689312FE9');
        $this->addSql('ALTER TABLE recette.recette_allergenes DROP CONSTRAINT FK_F997DF964646AB2');
        $this->addSql('ALTER TABLE recette.recette_ustensiles DROP CONSTRAINT FK_A3D3C14E89312FE9');
        $this->addSql('ALTER TABLE recette.recette_ustensiles DROP CONSTRAINT FK_A3D3C14EB78A4282');
        $this->addSql('DROP TABLE recette.allergenes');
        $this->addSql('DROP TABLE recette.etapes');
        $this->addSql('DROP TABLE recette.ingredients');
        $this->addSql('DROP TABLE recette.nutrition_faits');
        $this->addSql('DROP TABLE recette.recette_ingredients');
        $this->addSql('DROP TABLE recette.recettes');
        $this->addSql('DROP TABLE recette.recette_tags');
        $this->addSql('DROP TABLE recette.recette_allergenes');
        $this->addSql('DROP TABLE recette.recette_ustensiles');
        $this->addSql('DROP TABLE auth.refresh_tokens');
        $this->addSql('DROP TABLE recette.tags');
        $this->addSql('DROP TABLE recette.type_ingredients');
        $this->addSql('DROP TABLE auth.users');
        $this->addSql('DROP TABLE recette.ustensiles');
    }
}
